// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutManager primitives ContainerNavigationMask should render correctly with default props 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  height: 100%;
}

<div
  className="emotion-0"
/>
`;

exports[`LayoutManager primitives ContainerNavigationMask should set pointerEvents to none while dragging 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  height: 100%;
  pointer-events: none;
}

<div
  className="emotion-0"
/>
`;
